bugfix. header text in Chrome have wrong height

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
           flex-direction: column;
 }
 body header {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
 }
 body header div.header-container {
