--- a/sass/body/header/_header.scss
+++ b/sass/body/header/_header.scss
@@ -1,5 +1,5 @@
 header {
-	min-height: 100%;
+	height: 100%;
 	width: 100%;
 
 	div.header-container {
